Closed Bug 1290629 Opened 8 years ago Closed 8 years ago

nightly 20160729 compile fails without webrtc, fatal error: webrtc/video_engine/include/vie_capture.h: No such file or directory

Categories

(Core :: WebRTC: Audio/Video, defect, P1)

50 Branch
defect

Tracking

()

RESOLVED FIXED
mozilla51
Tracking Status
firefox50 --- fixed
firefox51 --- fixed

People

(Reporter: u532768, Assigned: jib)

References

Details

(Keywords: regression)

Attachments

(2 files, 2 obsolete files)

User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:50.0) Gecko/20100101 Firefox/50.0
Build ID: 20160728170116

Steps to reproduce:

Update local hg repository for nightly, then compile it.  


Actual results:

4:55.45 In file included from /mnt/to_archive/accum/src/mozilla-central/obj-x86_64-pc-linux-gnu/layout/generic/Unified_cpp_layout_generic1.cpp:65:0:
 4:55.45 /mnt/to_archive/accum/src/mozilla-central/layout/generic/nsFlexContainerFrame.cpp: In member function ‘void nsFlexContainerFrame::DoFlexLayout(nsPresContext*, nsIFrame::ReflowOutput&, const ReflowInput&, nsReflowStatus&, nscoord,
 nscoord, nsTArray<nsFlexContainerFrame::StrutInfo>&, const nsFlexContainerFrame::FlexboxAxisTracker&)’:
 4:55.45 Warning: -Wmaybe-uninitialized in /mnt/to_archive/accum/src/mozilla-central/layout/generic/nsFlexContainerFrame.cpp: ‘flexContainerAscent’ may be used uninitialized in this function
 4:55.45 /mnt/to_archive/accum/src/mozilla-central/layout/generic/nsFlexContainerFrame.cpp:4201:3: warning: ‘flexContainerAscent’ may be used uninitialized in this function [-Wmaybe-uninitialized]
 4:55.45    if (flexContainerAscent == nscoord_MIN) {
 4:55.46    ^~
 4:57.48 In file included from /mnt/to_archive/accum/src/mozilla-central/dom/media/webrtc/MediaEngineDefault.h:21:0,
 4:57.48                  from /mnt/to_archive/accum/src/mozilla-central/dom/media/webrtc/MediaEngineDefault.cpp:5,
 4:57.48                  from /mnt/to_archive/accum/src/mozilla-central/obj-x86_64-pc-linux-gnu/dom/media/webrtc/Unified_cpp_dom_media_webrtc0.cpp:2:
 4:57.48 /mnt/to_archive/accum/src/mozilla-central/dom/media/webrtc/MediaEngineCameraVideoSource.h:14:53: fatal error: webrtc/video_engine/include/vie_capture.h: No such file or directory
 4:57.48  #include "webrtc/video_engine/include/vie_capture.h"
 4:57.48                                                      ^
 4:57.48 compilation terminated.
 4:57.49 
 4:57.49 In the directory  /mnt/to_archive/accum/src/mozilla-central/obj-x86_64-pc-linux-gnu/dom/media/webrtc
 4:57.49 The following command failed to execute properly:
 4:57.49 /usr/bin/ccache /usr/lib64/ccache/g++ -std=gnu++11 -o Unified_cpp_dom_media_webrtc0.o -c -I/mnt/to_archive/accum/src/mozilla-central/obj-x86_64-pc-linux-gnu/dist/stl_wrappers -I/mnt/to_archive/accum/src/mozilla-central/obj-x86_64
-pc-linux-gnu/dist/system_wrappers -include /mnt/to_archive/accum/src/mozilla-central/config/gcc_hidden.h -DNDEBUG=1 -DTRIMMED=1 -DOS_POSIX=1 -DOS_LINUX=1 -DSTATIC_EXPORTABLE_JS_API -DMOZILLA_INTERNAL_API -DIMPL_LIBXUL -I/mnt/to_archive/accum/src/mozilla-central/dom/media/webrtc -I/mnt/to_archive/accum/src/mozilla-central/obj-x86_64-pc-linux-gnu/dom/media/webrtc -I/mnt/to_archive/accum/src/mozilla-central/obj-x86_64-pc-linux-gnu/ipc/ipdl/_ipdlheaders -I/mnt/to_archive/accum/src/mozilla-central/ipc/chromium/src -I/mnt/to_archive/accum/src/mozilla-central/ipc/glue -I/mnt/to_archive/accum/src/mozilla-central/obj-x86_64-pc-linux-gnu/dist/include -I/mnt/to_archive/accum/src/mozilla-central/obj-x86_64-pc-linux-gnu/dist/include/nspr -I/mnt/to_archive/accum/src/mozilla-central/obj-x86_64-pc-linux-gnu/dist/include/nss -fPIC -DMOZILLA_CLIENT -include /mnt/to_archive/accum/src/mozilla-central/obj-x86_64-pc-linux-gnu/mozilla-config.h -MD -MP -MF .deps/Unified_cpp_dom_media_webrtc0.o.pp -Wall -Wc++11-compat -Wempty-body -Wignored-qualifiers -Woverloaded-virtual -Wpointer-arith -Wsign-compare -Wtype-limits -Wunreachable-code -Wwrite-strings -Wc++14-compat -Wno-invalid-offsetof -Wno-error=maybe-uninitialized -Wno-error=deprecated-declarations -Wno-error=array-bounds -fno-exceptions -fno-strict-aliasing -fno-rtti -fno-exceptions -fno-math-errno -pthread -pipe -g -Wall -fno-schedule-insns2 -fno-lifetime-dse -fno-delete-null-pointer-checks -O3 -fomit-frame-pointer -Wno-error=attributes -Wno-error=shadow /mnt/to_archive/accum/src/mozilla-central/obj-x86_64-pc-linux-gnu/dom/media/webrtc/Unified_cpp_dom_media_webrtc0.cpp
 4:57.49 /mnt/to_archive/accum/src/mozilla-central/config/rules.mk:934: recipe for target 'Unified_cpp_dom_media_webrtc0.o' failed
 4:57.49 gmake[5]: *** [Unified_cpp_dom_media_webrtc0.o] Error 1
 4:57.49 /mnt/to_archive/accum/src/mozilla-central/config/recurse.mk:71: recipe for target 'dom/media/webrtc/target' failed
 4:57.49 gmake[4]: *** [dom/media/webrtc/target] Error 2
 4:57.49 gmake[4]: *** Waiting for unfinished jobs....



Expected results:

PASS
PASS
This seems to be a regression to https://bugzilla.mozilla.org/show_bug.cgi?id=1255217

And it arose after the fix for this bug, https://bugzilla.mozilla.org/show_bug.cgi?id=1284726 went in recently.

As a workaround, I've been enabling webrtc, and then nightly compiles fine.  But I'd rather not have webrtc enabled, since I don't use it.
Summary: nightly 20160729 compile fails without webrts, fatal error: webrtc/video_engine/include/vie_capture.h: No such file or directory → nightly 20160729 compile fails without webrtc, fatal error: webrtc/video_engine/include/vie_capture.h: No such file or directory
this is a regression from bug 1286096, the following changeset.
https://hg.mozilla.org/mozilla-central/rev/ca07b7baf290
Blocks: 1286096
Status: UNCONFIRMED → NEW
QA Whiteboard: [bugday-20160801]
Component: Untriaged → WebRTC: Audio/Video
Ever confirmed: true
Keywords: regression
Product: Firefox → Core
Attachment #8776658 - Attachment is obsolete: true
Attachment #8776658 - Flags: review?(rjesup)
Assignee: nobody → jib
Comment on attachment 8776658 [details]
Bug 1290629 - Make default cam, which is supposed to model a real cam, nonetheless independent of webrtc includes.

https://reviewboard.mozilla.org/r/68360/#review65682
Attachment #8776658 - Flags: review+
Comment on attachment 8776678 [details]
Bug 1290629 - Make default cam, which is supposed to model a real cam, nonetheless independent of webrtc includes.

https://reviewboard.mozilla.org/r/68386/#review65684
Attachment #8776678 - Flags: review?(rjesup) → review+
Pushed by jbruaroey@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/c74f4ce68ffe
Make default cam, which is supposed to model a real cam, nonetheless independent of webrtc includes. r=jesup
backlog: --- → webrtc/webaudio+
Rank: 19
Priority: -- → P1
https://hg.mozilla.org/mozilla-central/rev/c74f4ce68ffe
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla51
Originally opened the ticket.  Confirming that this fix works for me.  Thank you.
Comment on attachment 8776678 [details]
Bug 1290629 - Make default cam, which is supposed to model a real cam, nonetheless independent of webrtc includes.

Approval Request Comment
[Feature/regressing bug #]: unsure exactly

[User impact if declined]: Inability to build with --disable-webrtc (used by Tor)

[Describe test coverage new/current, TreeHerder]: We don't make --disable-webrtc builds.  Manually tested on linux

[Risks and why]: No risk.  Only affects whether it builds or not, and only with an option we don't use for our builds.  NPOTB

[String/UUID change made/needed]: none
Attachment #8776678 - Flags: approval-mozilla-beta?
Attachment #8776678 - Flags: approval-mozilla-aurora?
Comment on attachment 8776678 [details]
Bug 1290629 - Make default cam, which is supposed to model a real cam, nonetheless independent of webrtc includes.

Looks like it was caused by bug 1286096
Attachment #8776678 - Flags: approval-mozilla-aurora?
Comment on attachment 8776678 [details]
Bug 1290629 - Make default cam, which is supposed to model a real cam, nonetheless independent of webrtc includes.

NPOTB, Beta50+
Attachment #8776678 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
 https://hg.mozilla.org/releases/mozilla-beta/rev/24b8f08f7756

This may be incorrect... if the tree has already moved to release.
Attachment #8997600 - Attachment is obsolete: true
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: