Bug 1290629 - Make default cam, which is supposed to model a real cam, nonetheless independent of webrtc includes. r=jesup a=ritu On a CLOSED TREE MozReview-Commit-ID: GmrzxCPcJB2